--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
 </tbody></table>
 
 <h1 id="neutrino-greeting">/NEUTRINO/GREETING</h1>
-
+<pre class="highlight shell tab-shell"><code><span class="gp">$ </span>curl -k -XGET https://auth.hcos.upmce.net/neutrino/greeting
+</code></pre>
 <h2 id="get"><strong><em>GET</em></strong></h2>
 
 <p><strong>Summary:</strong> greeting</p>
